feat: add Dark Mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +50,6 @@
         </div>
         
     </header>
-
     <nav class="nav-mobile">
         <ul class="menu menu-mobile">
             <li class="menu-item">
@@ -83,5 +82,15 @@
         </ul>
     </nav>
 
+    <main>
+
+    </main>
+
+    <footer>
+        <p>©2023 Todos os Direitos Rervados. Desenvolvido por Vitor Ramon. Veja no <a href="https://github.com/vitorramon/vitorramon.github.io">Github</a></p>
+    </footer>
+
+
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
