feat: add Sections main and skills

--- a/index.html
+++ b/index.html
@@ -83,8 +83,51 @@
     </nav>
 
     <main>
+        <div class="main_content1">
+            <h1><b>Soluções Criativas &</b> Desenvolvimento de Sistemas</h1>
+            <p>Vitor Ramon, Manaus-AM, Desenvolvedor e Analista de Sistemas.</p>
+            <ul class="menu menu-social">
+                <li>
+                    <a class="menu_link" href="https://github.com/vitorramon">
+                        <i class="menu_icon bi bi-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="menu_link" href="https://br.linkedin.com/in/vitorramon">
+                        <i class="menu_icon bi bi-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <button class="btn btn--primary">
+                <span>Ver Projetos</span>
+                <i class="bi bi-arrow-down-right"></i>
+            </button>
+        </div>
 
+        <div class="main_content2">
+            <iframe src="https://www.youtube.com/watch?v=jfKfPfyJRdk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </main>
+
+    <section class="skills">
+        <h2>
+            Conhecimento nas principais tecnologias do mercado
+        </h2>
+        <ul class="skills__list">
+            <li class="skills__item">
+                <img class="skills__logo" src="/assets/imgs/tecnologias/Angular.svg" alt="logo Angular">
+            </li>
+            <li class="skills__item">
+                <img class="skills__logo" src="/assets/imgs/tecnologias/TypeScript.svg" alt="logo TypeScript">
+            </li>
+            <li class="skills__item">
+                <img class="skills__logo" src="/assets/imgs/tecnologias/Bootstrap.svg" alt="logo Bootstrap">
+            </li>
+            <li class="skills__item">
+                <img class="skills__logo" src="/assets/imgs/tecnologias/SASS.svg" alt="logo SASS">
+            </li>
+        </ul>
+    </section>
 
     <footer>
         <p>©2023 Todos os Direitos Rervados. Desenvolvido por Vitor Ramon. Veja no <a href="https://github.com/vitorramon/vitorramon.github.io">Github</a></p>
