feat: add Section: Projects

--- a/index.html
+++ b/index.html
@@ -109,24 +109,71 @@
         </div>
     </main>
 
-    <section class="skills">
+    <section class="technologies">
         <h2>
             Conhecimento nas principais tecnologias do mercado
         </h2>
-        <ul class="skills__list">
-            <li class="skills__item">
-                <img class="skills__logo" src="/assets/imgs/tecnologias/Angular.svg" alt="logo Angular">
+        <ul class="technologies__list">
+            <li class="technologies__item">
+                <img class="technologies__logo" src="/assets/imgs/tecnologias/Angular.svg" alt="logo Angular">
             </li>
-            <li class="skills__item">
-                <img class="skills__logo" src="/assets/imgs/tecnologias/TypeScript.svg" alt="logo TypeScript">
+            <li class="technologies__item">
+                <img class="technologies__logo" src="/assets/imgs/tecnologias/TypeScript.svg" alt="logo TypeScript">
             </li>
-            <li class="skills__item">
-                <img class="skills__logo" src="/assets/imgs/tecnologias/Bootstrap.svg" alt="logo Bootstrap">
+            <li class="technologies__item">
+                <img class="technologies__logo" src="/assets/imgs/tecnologias/Bootstrap.svg" alt="logo Bootstrap">
             </li>
-            <li class="skills__item">
-                <img class="skills__logo" src="/assets/imgs/tecnologias/SASS.svg" alt="logo SASS">
+            <li class="technologies__item">
+                <img class="technologies__logo" src="/assets/imgs/tecnologias/SASS.svg" alt="logo SASS">
             </li>
         </ul>
+    </section>
+
+    <section id="projetos" class="projects">
+        <h2>
+            Projetos
+        </h2>
+        <div class="projects__container">
+            <div class="projects__card">
+                <img class="card__cover" src="/assets/imgs/projects/josisbox.jpg" alt="">
+                <div class="card__body">
+                    <h3 class="card__title">Projeto 1</h3>
+                    <p class="card__description">
+                        Uma descrição do projeto
+                    </p>
+                    <ul class="card__list">
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                    </ul>
+
+                    <ul class="technologies__list">
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="/assets/imgs/tecnologias/Angular.svg" alt="logo Angular">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="/assets/imgs/tecnologias/TypeScript.svg" alt="logo TypeScript">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="/assets/imgs/tecnologias/Bootstrap.svg" alt="logo Bootstrap">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="/assets/imgs/tecnologias/SASS.svg" alt="logo SASS">
+                        </li>
+                    </ul>
+
+                    <div class="card__buttons">
+                        <button class="btn btn--primary">
+                            <span>Prévia</span>
+                            <i class="bi bi-arrow-up-right"></i>
+                        </button>
+                        <button class="btn">
+                            <span>Repositório</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
